Adjusted the style to fix the small misalignment of the author nav left/right arrows (it was not aligned with the rest of the text).

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,6 @@
 
 .nav-triangle {
     font-size: 16px; /* Change the size of the triangle */
-    line-height: 1;
     display: inline-block;
     vertical-align: middle;
 }
